major frontend and backend changes

--- a/templates/Notes/addNotesInstitute.html
+++ b/templates/Notes/addNotesInstitute.html
@@ -566,5 +566,8 @@
         }
     });
 
+    $(document).on('click', '.btn-danger', function(){
+    return confirm('Are you sure you want to delete this?');
+    })
 </script>
 {% endblock main-content %}
