--- a/templates/batches/batch-timing.html
+++ b/templates/batches/batch-timing.html
@@ -13,6 +13,8 @@
 </style>
 <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-beta.1/dist/css/select2.min.css" rel="stylesheet" />
 <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-beta.1/dist/js/select2.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-multiselect/0.9.13/js/bootstrap-multiselect.js"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-multiselect/0.9.13/css/bootstrap-multiselect.css">
 <div class="mt-5">
   {% if messages %}
   {% for k in messages%}
@@ -107,7 +109,7 @@
           <label for="validationCustom01"><strong>Select Days <span class="red">*</span></strong></label>
 
           <div>
-            <select required class="form-control  selectpicker multiselect multiple-checkboxes" data-actions-box="true" id="days" name='fordays' required>
+            <select required multiple class="form-control  selectpicker multiselect multiple-checkboxes" data-actions-box="true" id="days" name='fordays' required>
               
               <option value="Sunday">Sunday</option>
               <option value="Monday">Monday</option>
@@ -225,6 +227,8 @@
 
 
   <script>
+    $('#days').multiselect({numberDisplayed: 2, nonSelectedText: 'Select Teaching Days'});
+
      $(document).on('click', '.confirm-inactive', function(){
     return confirm('Are you sure you want to delete this?');
     })
