--- a/templates/courses-2/archive-courses.html
+++ b/templates/courses-2/archive-courses.html
@@ -208,6 +208,9 @@ Institute Dashboard
       includeSelectAllOption: true,
     });
   });
+  $(document).on('click', '.btn-danger', function(){
+    return confirm('Are you sure you want to delete this?');
+    })
 </script>
 {% endblock main-content %}
 
