--- a/templates/students/archiveStudentList.html
+++ b/templates/students/archiveStudentList.html
@@ -291,7 +291,7 @@
                                 <th>Class</th>
                                 <th>Course</th>
                                 <th class="text-center">Delete</th>
-                                <th class="text-center">Remove Archive</th>
+                                <th class="text-center">Unarchive</th>
                             </tr>
                             <!--Table head-->
                             <!--Table body-->
@@ -323,7 +323,7 @@
                     </div>
                     <!--Table-->
                     <div class="form-group">
-                        <input type="submit" value="Remove from Archive" class="btn btn-danger float-right">
+                        <input type="submit" value="Unarchive" class="btn btn-danger float-right">
                     </div>
                     <br>
                 </form>
