--- a/templates/batches/batchTimingEdit.html
+++ b/templates/batches/batchTimingEdit.html
@@ -14,6 +14,8 @@
 <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-beta.1/dist/css/select2.min.css" rel="stylesheet" />
 <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-beta.1/dist/js/select2.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-multiselect/0.9.13/js/bootstrap-multiselect.js"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-multiselect/0.9.13/css/bootstrap-multiselect.css">
 
 <div class="mt-5">
     {% if messages %}
@@ -136,6 +138,7 @@
         </form>
     </div>
     <script>
+        $('#days').multiselect({numberDisplayed: 2, nonSelectedText: 'Select Teaching Days'});
         // In your Javascript (external .js resource or <script> tag)
         $(document).ready(function () {
             $('.js-example-basic-single').select2();
