--- a/templates/courses-2/courses.html
+++ b/templates/courses-2/courses.html
@@ -128,7 +128,7 @@
                         <td class="text-center">
                             <a data-toggle="tooltip" title="Edit" class="btn btn-warning" href="{% url 'editCourse' i.id %}"><i class="flaticon-pencil-line"
                                 style="font-size:medium;"></i></a>
-                            <a data-toggle="tooltip" title="Delete" class="btn btn-danger" href="{% url 'deleteCourse' i.id %}"><i class="flaticon-delete-fill"
+                            <a data-toggle="tooltip" title="Delete" class="btn btn-danger" href="{% url 'deleteCourse' i.id %}" onclick="ConfirmDelete(i.id)"><i class="flaticon-delete-fill"
                                 style="font-size:medium;"></i></a>
                             <a data-toggle="tooltip" title="Archive" class="btn btn-dark" href="{% url 'courseArchivefirst' i.id %}"><i class="flaticon-log-4"
                               style="font-size:medium;"></i></a>
@@ -240,6 +240,10 @@
           newOption.appendChild(newOptionVal);
           select.insertBefore(newOption, select.firstChild);
         }
+
+        $(document).on('click', '.btn-danger', function(){
+    return confirm('Are you sure you want to delete this?');
+    })
         
     </script>
 </div>
